# django-webpack

./: .gitignore  pyproject.toml
django_webpack/: middleware.py  webpack.py
django_webpack/management/commands/: collectstatic.py  liststatic.py  runserver.py
sample/: package.json
sample/sample/: settings.py
sample/sample/example/: apps.py  models.py
sample/sample/example/migrations/: 0001_initial.py
