[tool.poetry]
name = "django-webpack"
version = "1.0.0"
description = ""
authors = ["Allan Ralph Hutalla <ahutalla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.15.0"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
