[tool.poetry]
name = "django-webpack"
version = "1.0.0"
description = ""
authors = ["Allan Ralph Hutalla <ahutalla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.1"
Django = "^3.2.7"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"
black = "^21.9b0"
django-extensions = "^3.1.3"
uvicorn = "^0.15.0"
starlette = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
